# Lantern

./: .gitignore  Makefile  README.md  pyproject.toml
hw/: hw01.ipynb  hw03.ipynb  hw04.ipynb  hw05.ipynb
notebooks/: 05-ML-Engineering.ipynb  06-CNN.ipynb  07-Deep-Architecture.ipynb  08-NLP.ipynb  09-RNN.ipynb  10-LSTM.ipynb  11-Attention.ipynb  12-Transformer.ipynb  hw02.ipynb  hw05.ipynb
src/lantern/: __init__.py  config.py  data.py  metrics.py  model.py  sweep.py  text.py  trainer.py  utils.py
src/my_engine/: config.py  metrics.py  model.py  sweep.py  trainer.py  utils.py
