[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern"  # <-- this is your importable package name. It needs to match the name of the folder you created under src/.
version = "0.1.0"
description = "Deep Neural Network Training and Evaluation Engine"
dependencies = [
    "jupyter",
    "jupyterlab",
    "jupytext",
    "nbconvert",
    "ipython>=8.18.0",
    "ipykernel",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy==1.13.1",
    "scikit-learn",
    "statsmodels",
    "torch",
    "torchvision",
    "torchaudio",
    "torchmetrics",
    "fastapi",
    "uvicorn",
    "gradio",
    "streamlit",
    "wandb",
    "tqdm",
    "kaggle",
    "kagglehub",
    "ucimlrepo",
    "transformers>=5.3.0",
    "datasets>=4.0.0",
]
requires-python = ">=3.11,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line-too-long: not auto-fixable in comments/docstrings

[tool.ruff.lint.isort]
known-first-party = ["lantern"]
